src/test/ui/suggestions/assoc_fn_without_self.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/assoc_fn_without_self.rs:14:13
   |
LL |             foo();
   |             ^^^ not found in this scope

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/assoc_fn_without_self.rs:16:9
   |
LL |         foo();
   |         ^^^ not found in this scope
   |
help: consider using the associated function
   |
LL |         Self::foo();
   |         ~~~~~~~~~

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/assoc_fn_without_self.rs:17:9
   |
LL |         bar();
   |         ^^^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/assoc_fn_without_self.rs:18:9
   |
LL |         baz(2, 3);
   |         ^^^ not found in this scope
   |
help: consider using the associated function
   |
LL |         Self::baz(2, 3);
   |         ~~~~~~~~~

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
